--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --watch",
+    "build": "cross-env NODE_ENV=production webpack --progress",
+    "server": "cross-env NODE_ENV=development node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -19,18 +22,30 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.0",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "better-scroll": "^1.13.4",
     "cross-env": "^5.2.0",
-    "vue": "^2.5.21"
+    "element-ui": "^2.4.11",
+    "fastclick": "^1.0.6",
+    "flex.css": "^1.1.7",
+    "good-storage": "^1.1.0",
+    "qs": "^6.6.0",
+    "vue": "^2.5.21",
+    "vue-lazyload": "^1.2.6",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.0.1"
   }
 }
